3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Add utils/crossloop.web.in script.  This script is used on metalforge -
   it generates the backtrace file, compresses the core, and sends out
   mail.
configure.in, configure: Rebuilt to make the crossloop.web script.
utils/Makefile.in: Install the crossloop.web script.  Include the
   crossloop.web.in script when making the archive.
utils/crossloop.web.in: New file.
MSW 2002-04-14

Update to improve image caching and faceset support in the client.
    The main change is adding the 'requestinfo image_info' and
    'requestinfo image_sums' commands.
common/image.c: Checksum the bmaps file when we load it - we send this as
    part of the image_info data.
doc/Developers/protocol: Document the requestinfo data.
include/global.h: Add extern for bmaps_checksum, and the define for
    ROTATE_RIGHT which is used for checksumming.
include/newserver.h: Update SC version to 1027 so that clients can
    know if they can issue requestinfo commands.
include/sockproto.h: rebuilt
lib/adm/collect_images.pl: Add support for it to make a crossfire-images
    distribution that the client can use to bootstrap its image set.
socket/image.c: Change SendFaceCmd to take a NewSocket parameter instead
    of a player parameter - in this way, it can be used before the
    AddMe command - this allows the client to download images before
    issuing that command.  Add send_image_info and send_image_sums
    function which send the requestinfo data to the client.
socket/loop.c: Move the askface command from the player commands to the
    newsocket commands.  Add RequestInfo functino that determines the